fix: resize window handle was hidden due to bad z-indexing

--- a/css/cortexprime.css
+++ b/css/cortexprime.css
@@ -11,6 +11,9 @@
   background: none;
   padding: 0;
 }
+.cortexprime.window-app .window-resizable-handle {
+  z-index: 10;
+}
 
 .dice-picker.window-app .window-content {
   background: none;
